# resec

./: Cargo.toml  README.md
.github/workflows/: rust.yml
resec_macros/: Cargo.toml
resec_macros/src/: lib.rs
schema/: schema.json
src/: consts.rs  error.rs  lib.rs  parser.rs  stages.rs
src/schema/: metadata.rs  subjects.rs
