[package]
name = "resec"
version = "0.1.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10"
thiserror = "1.0"
select = "0.4"
chrono = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
